# cognitive_v1

./: .env  .gitignore  Cargo.toml  Dioxus.toml  readme.md  run_dev.sh  rustfmt.toml
assets/: cognitive.svg.txt  logo.xcf  main.css
docs/: readme.md
ops/: db_init.sh  readme.md
ops/db_migrations/: 0001_create_table_user_accounts.sql  0003_create_table_tags.sql  0004_create_table_attribute_defs.sql  0005_create_table_entity_defs.sql  0006_create_table_entity_def_tags_xref.sql  0007_create_table_entity_defs_attribute_defs_xref.sql  0008_create_table_entities.sql  0009_create_table_entity_link_defs.sql  0010_create_table_entity_link_defs_attribute_defs_xref.sql  0011_create_table_entity_links.sql  0012_create_table_text_attributes.sql  0013_create_table_smallint_attributes.sql  0014_create_table_bigint_attributes.sql  0015_create_table_integer_attributes.sql  0016_create_table_real_attributes.sql  0017_create_table_boolean_attributes.sql  0018_create_table_date_attributes.sql  0019_create_table_timestamp_attributes.sql
src/: lib.rs  main.rs
src/assets/: tailwind.config.js
src/domain/model/: id.rs  mod.rs  user.rs
src/domain/model/metamodel/: attr_def.rs  boolean_attr.rs  ent_def.rs  ent_link.rs  ent_link_def.rs  entity.rs  int_attr.rs  item.rs  mod.rs  smallint_attr.rs  tag.rs  text_attr.rs
src/domain/model/metamodel/attributes/: attr.rs
src/server/: app_err_uc.rs  auth.rs  database.rs  mod.rs  server.rs  session.rs  state.rs  websockets.rs
src/server/fns/: attr_def_fns.rs  auth.rs  ent_def_fns.rs  ent_fns.rs  ent_link_def_fns.rs  ent_link_fns.rs  mod.rs  tag_fns.rs  user_profile.rs
src/server/logic/: mod.rs  user_mgmt.rs
src/server/logic/metamodel/: attr_def_mgmt.rs  ent_def_mgmt.rs  ent_link_def_mgmt.rs  ent_link_mgmt.rs  ent_mgmt.rs  mod.rs  pagination.rs  tag_mgmt.rs
src/server/model/: id.rs
src/server/repos/: mod.rs  users_repo.rs
src/server/repos/metamodel/: attr_def_repo.rs  ent_def_repo.rs  ent_link_def_repo.rs  ent_link_repo.rs  ent_repo.rs  mod.rs  tags_repo.rs
src/ui/: action.rs  app.rs  mod.rs  routes.rs  ui_state.rs  ui_storage.rs
src/ui/comps/: breadcrumb.rs  gt_sep.rs  mod.rs  modals.rs  select.rs
src/ui/comps/metamodel/: attr_def_form.rs  ent_form.rs  ent_link_form.rs  mod.rs  tag_form.rs
src/ui/comps/nav/: common.rs  mod.rs  nav.rs  nav_user_menu.rs
src/ui/pages/: home.rs  login.rs  logout.rs  mod.rs  user_profile_page.rs
src/ui/pages/admin/: admin_page.rs  mod.rs
src/ui/pages/meta/: mod.rs
src/ui/pages/meta/attr_def/: attr_def_list_page.rs  attr_def_new_page.rs  attr_def_page.rs  mod.rs
src/ui/pages/meta/ent/: ent_list_page.rs  ent_new_page.rs  ent_page.rs  mod.rs
src/ui/pages/meta/ent_def/: commons.rs  ent_def_form.rs  ent_def_list_page.rs  ent_def_new_page.rs  ent_def_page.rs  mod.rs
src/ui/pages/meta/ent_link/: ent_link_list_page.rs  ent_link_new_page.rs  ent_link_page.rs  mod.rs
src/ui/pages/meta/ent_link_def/: ent_link_def_form.rs  ent_link_def_list_page.rs  ent_link_def_new_page.rs  ent_link_def_page.rs  mod.rs
src/ui/pages/meta/tag/: mod.rs  tag_list_page.rs  tag_page.rs  (+1 more)
