[package]
name = "cognitive"
version = "0.6.0"
authors = ["dxps <marius.ileana@gmail.com>"]
edition = "2021"

#############
[profile.dev]
#############
codegen-units = 18

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


##############
[dependencies]
##############

dioxus = { version = "0.6.3", features = ["fullstack", "router"] }
dioxus-web = { version = "0.6.3", features = ["hydrate"], optional = true }
dioxus-fullstack = { version = "0.6.3" }
dioxus-cli-config = { version = "0.6.3", optional = true }

serde = { version = "1.0.217", features = [ "derive", "rc" ] }
serde_json = "1.0.138"

tracing = "0.1.41"
log = { version = "0.4.25", optional = true }
simple_logger = { version = "5.0.0", optional = true }
console_log = { version = "1.0.0", optional = true }
thiserror = { version = "2.0.11" }
anyhow = "1.0.95"

axum = { version = "0.7.9", features = ["ws"], optional = true }
axum-extra = { version = "0.9.6", features = ["typed-header"], optional = true }
axum_session = { version = "0.14.4", optional = true }
axum_session_auth = { version = "0.14.1", optional = true }
# `axum_session_sqlx` 0.3 requires the update of `sqlx` to 0.8.
axum_session_sqlx = { version = "0.1.1", features = ["postgres", "tls-rustls"], optional = true }

tokio = { version = "1.41.1", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.24.0", optional = true }
tower = { version = "0.5.1", features = ["util"], optional = true }
tower-http = { version = "0.6.2", features = [ "auth", "fs", "trace" ], optional = true }
http = { version = "1.1.0", optional = true }

async-trait = { version = "0.1.83", optional = true }
sqlx = { version = "0.7.4", features = [
    "macros",
    "migrate",
    "postgres",
    "_unstable-all-types",
    "tls-rustls",
    "runtime-tokio",
], optional = true }

futures = { version = "0.3.31", optional = true }
futures-util = { version = "0.3.31", default-features = false, features = [
    "sink",
    "std",
], optional = true }

web-sys = { version = "0.3.77", features = [ "Storage", "Window" ] }
nid = { version = "3.0.0" }
getrandom = { version = "0.2.15", features = ["js"] }
fastrand = { version = "2.2.0", optional = true }
md5 = { version = "0.7.0", optional = true }

dotenvy = { version = "0.15.7", optional = true }

strum = { version = "0.26.3", features = ["derive"] }

chrono = { version = "0.4.39" }
indexmap = { version = "2.7.1", features = [ "serde" ] }

##########
[features]
##########

default = []

server = [
    "axum",
    "axum-extra",
    "axum_session", "axum_session_auth", "axum_session_sqlx",
    "dioxus-fullstack/axum",
    "dep:dioxus-cli-config",
    "tokio",
    "tokio-tungstenite",
    "tower-http",
    "http",
    "futures", "futures-util",
    "log", "console_log", "simple_logger",
    "async-trait",
    "sqlx",
    "fastrand", "md5",
    "dotenvy"
]

web = [
    "dioxus/web",
    "log", 
    "console_log"
]
